--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -14,7 +14,8 @@
            <input placeholder="Location..">
            <button>Search</button>
            </form>
-
+<p id="message-1"></p>
+<p id="message-2"></p>
             </div>
        
        {{>footer}}
