changes in about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -8,6 +8,7 @@
     <body>
       <div class="main-content">
   {{>header}}
+  <p>This site was created by Siddhant Agarwal .It uses data from mapbox and weatherstack</p>
         <img class="potrait" src="/img/robot.png">
       </div>
     
